--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,33 @@
+APScheduler==3.6.3
+async-timeout==4.0.2
+backports.zoneinfo==0.2.1
+cachetools==4.2.2
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
 config==0.5.1
+Deprecated==1.2.13
 Flask==2.2.2
+gunicorn==20.1.0
+idna==3.4
+importlib-metadata==5.0.0
 instaloader==4.9.5
-python_telegram_bot==13.14
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+packaging==21.3
+pyparsing==3.0.9
+python-telegram-bot==13.14
+pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
 redis==4.3.4
+requests==2.28.1
 rq==1.11.1
+six==1.16.0
+tornado==6.1
+tzdata==2022.5
+tzlocal==4.2
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.14.1
+zipp==3.10.0
